# deploy-translation

./: .gitignore  .pre-commit-config.yaml  app.py  create_csv_follow.ipynb  export_to_gdrive.py  main.py  pyproject.toml
templates/: admin_dashboard.html  article.html  dashboard.html  login.html  reviewer_dashboard.html  select_language.html  translator_dashboard.html
translation/: database.py  google_apis.py  translation.py
